Adds no op tweeter implementation fallback
Instead of throwing an exception when no tweeter implementation is found
we use a no op implementation instead and log it as warning only.

Signed-off-by: Patrick Reinhart <patrick@reini.net>